tests/golden/defaults/openshift-upgrade-controller/openshift-upgrade-controller/rbac.authorization.k8s.io_v1_clusterrole_openshift-upgrade-controller-manager-role.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  labels:
    app.kubernetes.io/managed-by: commodore
  name: openshift-upgrade-controller-manager-role
rules:
- apiGroups:
  - ""
  resources:
  - nodes
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - batch
  resources:
  - jobs
  verbs:
  - create
  - delete
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - batch
  resources:
  - jobs/finalizers
  verbs:
  - update
- apiGroups:
  - config.openshift.io
  resources:
  - clusterversions
  verbs:
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - machineconfiguration.openshift.io
  resources:
  - machineconfigpools
  verbs:
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - clusterversions
  verbs:
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - clusterversions/finalizers
  verbs:
  - update
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - clusterversions/status
  verbs:
  - get
  - patch
  - update
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - upgradeconfigs
  verbs:
  - create
  - delete
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - upgradeconfigs/finalizers
  verbs:
  - update
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - upgradeconfigs/status
  verbs:
  - get
  - patch
  - update
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - upgradejobhooks
  verbs:
  - get
  - list
  - watch
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - upgradejobhooks/status
  verbs:
  - get
  - patch
  - update
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - upgradejobs
  verbs:
  - create
  - delete
  - get
  - list
  - patch
  - update
  - watch
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - upgradejobs/finalizers
  verbs:
  - update
- apiGroups:
  - managedupgrade.appuio.io
  resources:
  - upgradejobs/status
  verbs:
  - get
  - patch
  - update
