tests/golden/defaults/openshift-upgrade-controller/openshift-upgrade-controller/v1_service_openshift-upgrade-controller-controller-manager-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: kube-rbac-proxy
    app.kubernetes.io/created-by: openshift-upgrade-controller
    app.kubernetes.io/instance: controller-manager-metrics-service
    app.kubernetes.io/managed-by: commodore
    app.kubernetes.io/name: service
    app.kubernetes.io/part-of: openshift-upgrade-controller
    control-plane: controller-manager
  name: openshift-upgrade-controller-controller-manager-metrics-service
  namespace: appuio-openshift-upgrade-controller
spec:
  ports:
  - name: https
    port: 8443
    protocol: TCP
    targetPort: https
  selector:
    control-plane: controller-manager
